第 12 期：页面优化 1. 用户端界面调整 2. 主色调变为橙黄色，订单添加分页查询 3. 添加粒子特效 4. 添加了几个商品

--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -96,7 +96,7 @@
 				</li>
 				
 				<li class="sidebar-menu-item">
-					<a th:href="@{/loginOut}" class="sidebar-menu-link">
+					<a th:href="@{/}" class="sidebar-menu-link">
 						<span class="sidebar-menu-icon">🚪</span>
 						<span class="sidebar-menu-text">安全退出</span>
 					</a>
