--- a/src/main/resources/templates/user/header.html
+++ b/src/main/resources/templates/user/header.html
@@ -11,6 +11,10 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/common.js"></script>
+<!-- 星空特效 -->
+<script src="js/starfield.js"></script>
+<!-- 粒子特效 -->
+<script src="js/particles.js"></script>
 </head>
 <body>
 	<!-- 顶部导航栏 -->
@@ -99,8 +103,9 @@
 	}
 	</script>
 	
-	<!-- 商品分类导航栏 -->
-	<nav class="navbar navbar-categories navbar-fixed-top" role="navigation" style="top: 50px;">
+	<!-- 商品分类导航栏（顺序调整到主导航栏下方，去除fixed-top） -->
+	<!-- 两个导航栏紧贴在一起，无间隔 -->
+	<nav class="navbar navbar-categories" role="navigation" style="margin-top: 0; position: static;">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#category-navbar">
