--- a/src/main/resources/templates/user/myFocus.html
+++ b/src/main/resources/templates/user/myFocus.html
@@ -9,11 +9,13 @@
 <link rel="stylesheet" href="css/custom.css" />
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/starfield.js"></script>
+<script src="js/particles.js"></script>
 </head>
 <body>
 <div th:include="user/header"></div>
 
-<div class="container" style="margin-top: 30px; margin-bottom: 60px;">
+<div class="container page-transition" style="margin-top: 30px; margin-bottom: 60px;">
 	<!-- 面包屑导航 -->
 	<ol class="breadcrumb breadcrumb-custom">
 		<li><a href="/">首页</a></li>
@@ -57,11 +59,11 @@
 									¥<span th:text="${focus.goprice}"></span>
 								</span>
 							</td>
-							<td class="text-center" style="vertical-align: middle;">
-								<span style="color: #FF6B6B; font-weight: 700; font-size: 18px;">
-									¥<span th:text="${focus.grprice}"></span>
-								</span>
-							</td>
+						<td class="text-center" style="vertical-align: middle;">
+							<span style="color: var(--primary-color); font-weight: 700; font-size: 18px;">
+								¥<span class="focus-price" th:text="${focus.grprice}"></span>
+							</span>
+						</td>
 							<td class="text-center" style="vertical-align: middle;">
 								<span class="badge-sale">
 									省 ¥<span th:text="${focus.goprice - focus.grprice}"></span>
@@ -100,5 +102,38 @@
 		</ul>
 	</div>
 </div>
+
+<script>
+$(document).ready(function() {
+	// 为收藏商品价格添加数字滚动动画
+	$('.focus-price').each(function(index) {
+		var $this = $(this);
+		var finalValue = parseFloat($this.text());
+		if (!isNaN(finalValue) && window.particleSystem) {
+			setTimeout(function() {
+				window.particleSystem.animateNumber($this[0], 0, finalValue, 800);
+			}, index * 100);
+		}
+	});
+	
+	// 为表格行添加悬停高亮效果
+	$('tbody tr').not(':has(.empty-state)').hover(
+		function() {
+			$(this).css({
+				'background-color': '#FFF5F0',
+				'transform': 'scale(1.01)',
+				'box-shadow': '0 2px 8px rgba(255, 102, 0, 0.1)'
+			});
+		},
+		function() {
+			$(this).css({
+				'background-color': '',
+				'transform': '',
+				'box-shadow': ''
+			});
+		}
+	);
+});
+</script>
 </body>
 </html>
