第 13 期：页面优化 1. 首页增加轮播图。 2. 修复订单页面分页不响应的bug。

--- a/src/main/resources/templates/user/header.html
+++ b/src/main/resources/templates/user/header.html
@@ -47,9 +47,9 @@
 				</ul>
 				
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="cart/userInfo">👤 个人信息</a></li>
-					<li><a href="cart/selectCart">🛒 购物车</a></li>
-					<li><a href="cart/myOder">📦 我的订单</a></li>
+					<li><a th:href="@{/cart/userInfo}">👤 个人信息</a></li>
+					<li><a th:href="@{/cart/selectCart}">🛒 购物车</a></li>
+					<li><a th:href="@{/cart/myOder}">📦 我的订单</a></li>
 					<li class="dropdown">
 						<a href="#" data-toggle="dropdown" class="dropdown-toggle">
 							ℹ️ 关于我们 <span class="caret"></span>
