--- a/src/main/resources/templates/user/pay.html
+++ b/src/main/resources/templates/user/pay.html
@@ -115,7 +115,7 @@
 			<span style="font-size: 18px;">💳</span>
 			<span>立即支付</span>
 		</button>
-		<a href="cart/myOder" class="btn btn-custom-secondary btn-lg">
+		<a th:href="@{/cart/myOder}" class="btn btn-custom-secondary btn-lg">
 			查看订单
 		</a>
 		<a th:href="@{/}" class="btn btn-default btn-lg">
