第 15 期：修改轮播图显示问题

--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -21,28 +21,28 @@
 	<div class="swiper-container">
 		<div class="swiper-wrapper">
 			<div class="swiper-slide">
-				<div class="banner" style="background-image: url(imgs/web/img/home-pagelun1.jpg);"></div>
+				<div class="banner" style="background-image: url(imgs/home-pagelun1.jpg);"></div>
 			</div>
 			<div class="swiper-slide">
-				<div class="banner" style="background-image: url(imgs/web/img/home-pagelun2.jpg);"></div>
+				<div class="banner" style="background-image: url(imgs/home-pagelun2.jpg);"></div>
 			</div>
 			<div class="swiper-slide">
-				<div class="banner" style="background-image: url(imgs/web/img/home-pagelun3.jpg);"></div>
+				<div class="banner" style="background-image: url(imgs/home-pagelun3.jpg);"></div>
 			</div>
 			<div class="swiper-slide">
-				<div class="banner" style="background-image: url(imgs/web/img/home-pagelun4.jpg);"></div>
+				<div class="banner" style="background-image: url(imgs/home-pagelun4.jpg);"></div>
 			</div>
 			<div class="swiper-slide">
-				<div class="banner" style="background-image: url(imgs/web/img/home-pagelun5.jpg);"></div>
+				<div class="banner" style="background-image: url(imgs/home-pagelun5.jpg);"></div>
 			</div>
 			<div class="swiper-slide">
-				<div class="banner" style="background-image: url(imgs/web/img/home-pagelun6.jpg);"></div>
+				<div class="banner" style="background-image: url(imgs/home-pagelun6.jpg);"></div>
 			</div>
 			<div class="swiper-slide">
-				<div class="banner" style="background-image: url(imgs/web/img/home-pagelun7.jpg);"></div>
+				<div class="banner" style="background-image: url(imgs/home-pagelun7.jpg);"></div>
 			</div>
 			<div class="swiper-slide">
-				<div class="banner" style="background-image: url(imgs/web/img/home-pagelun8.jpg);"></div>
+				<div class="banner" style="background-image: url(imgs/home-pagelun8.jpg);"></div>
 			</div>
 		</div>
 		<!-- 分页器 -->
