--- a/src/main/resources/templates/user/cart.html
+++ b/src/main/resources/templates/user/cart.html
@@ -183,7 +183,7 @@
 					<a href="javascript:clearCart()" class="btn btn-default btn-lg">
 						🗑️ 清空购物车
 					</a>
-					<a href="/" class="btn btn-custom-secondary btn-lg">
+					<a href="/eBusiness" class="btn btn-custom-secondary btn-lg">
 						继续购物
 					</a>
 					<a href="cart/selectCart?act=toCount" class="btn btn-custom-primary btn-lg btn-icon">
